--- a/pug/_template.pug
+++ b/pug/_template.pug
@@ -2,9 +2,10 @@ doctype html
 html
   head
     meta(charset="utf-8")
+    meta(name='viewport', content='width=device-width,initial-scale=1')
     block title
     link(rel="stylesheet" type="text/css" href="css/common.css")
     block link
   body
-    include _menu.pug
+    include _header.pug
     block content
