--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,17 +4,16 @@ block title
   title Yuka Niiyama - work
 
 block content
-  .container
-    h2 Work
-    .card
-      a(href='optimalbiz.html')
-        .optimalbiz
-          .card__icon
+  .main
+    .container
+      h2 Work
+      .card
+        a(href='optimalbiz.html')
+          .card__icon.optimalbiz
             img(src='image/optimalbiz-icon.png')
-        h3 Optimal Biz UIリニュアル
-    .card
-      a(href='switch.html')
-        .switch
-          .card__icon
+          h3 Optimal Biz UIリニュアル
+      .card
+        a(href='switch.html')
+          .card__icon.switch
             img(src='image/switch-icon.png')
-        h3 起業シミュレーション Switch
+          h3 起業シミュレーション Switch
