--- a/pug/profile.pug
+++ b/pug/profile.pug
@@ -7,7 +7,7 @@ block content
     .pane-2
       img(src='image/niiyama.jpg')
     .pane-2
-      h3.name-ja 新山 優佳
+      h3.name 新山 優佳
       h5.address 北海道出身
       p 大学と大学院で5年間、情報デザインを学びました。
       p 大学卒業後はWebアプリケーションのエンジニアとしてデザイン以降の開発プロセスに携わり、デザイナとエンジニアの橋渡しに取り組んできました。
