--- a/pug/_template.pug
+++ b/pug/_template.pug
@@ -5,6 +5,8 @@ html
     meta(name='viewport', content='width=device-width,initial-scale=1')
     block title
     link(rel="stylesheet" type="text/css" href="css/common.css")
+    script(type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
+    script(type='text/javascript' src='javascript/common.js')
     block link
   body
     include _header.pug
