--- a/sass/common.sass
+++ b/sass/common.sass
@@ -1,10 +1,4 @@
 @import 'reset'
-
-%clearfix
-  content: ""
-  clear: both
-  display: block
-
 body
   width: 100%
   line-height: 1.5
@@ -87,11 +81,40 @@ img
     box-shadow: 4px 4px 4px rgba(0,0,0,.2)
     margin-bottom: 16px
 
+%clearfix
+  &:after
+    content: ""
+    clear: both
+    display: block
+
+%animation
+  transition: all 0.4s ease
+  -webkit-transition: all 0.4s ease
+  -moz-transition: all 0.4s ease
+  -o-transition: all 0.4s ease
+
+//---------- ヘッダー ----------//
+
+@import 'header'
+
+header,
+header h1,
+header a,
+header .inner,
+.main.smooth,
+#nav-open
+  @extend %animation
+
+header nav,
+header .inner
+  @extend %clearfix
+
+//---------- コンテナ ----------//
+
 .container
   width: 800px
   margin: 160px auto
-  &:after
-    @extend %clearfix
+  @extend %clearfix
   & > *
     margin-left: 16px
     margin-right: 16px
@@ -161,25 +184,6 @@ img
   margin-top: 0
   font-weight: normal
 
-header
-  width: 768px
-  margin: 80px auto
-  nav:after
-    @extend %clearfix
-  li
-    float: left
-    margin-right: 8px
-  a[type=button]
-    display: inline-block
-    padding: 0 16px
-    border: 1px black solid
-    line-height: 32px
-    background: white
-    color: black 
-    &:hover
-      background: black
-      color: white
-
 .hero
   padding: 16px 0
   color: white
@@ -207,14 +211,6 @@ header
       color: rgb(255,160,26)
 
 @media screen and (max-width: 799px)
-  header
-    width: calc(100% - 32px)
-    a[type=button]
-      width: 100%
-      text-align: center
-    li
-      width: calc(100% - 34px)
-      margin: 8px 0
   .container
     width: calc(100% - 32px)
   .card
