--- a/pug/profile.pug
+++ b/pug/profile.pug
@@ -4,6 +4,7 @@ block title
   title Yuka Niiyama - profile
 block content
   .container
+    h2 Profile
     .pane-2
       img(src='image/niiyama.jpg')
     .pane-2
