--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -5,12 +5,12 @@ header
   z-index: 1
   background: white
   h1
-    @import url('https://fonts.googleapis.com/css?family=Kalam:300,400')
     display: block
     margin: 0
     line-height: 160px
-    font-family: 'Kalam', cursive
-    font-weight: 300
+    font-family: 'Encode Sans Semi Expanded', sans-serif
+    font-weight: 200
+    font-style: normal
     color: rgb(110,110,110)
   nav
     position: relative
@@ -30,7 +30,7 @@ header
     font-size: 1em
     color: rgb(110,110,110)
     &:hover
-      box-shadow: 0 1px 0 rgba(85,85,85,.5)
+      box-shadow: 0 1px 0 rgba(85,85,85,.3)
       background: rgb(110,110,110)
       color: rgb(255,255,255)
     &:active
