--- a/sass/common.sass
+++ b/sass/common.sass
@@ -1,10 +1,12 @@
 @import 'reset'
+@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded')
+
 body
   width: 100%
   line-height: 1.5
   font-size: 16px
   font-family: Helvetica, '游ゴシック', 'Yu Gothic', YuGothic, HiraKakuProN-W3, 'メイリオ', Meiryo, sans-serif
-  color: black
+  color: rgb(15,15,15)
 
 h1
   display: block
@@ -21,6 +23,7 @@ h2
   margin-bottom: 0.83em
   margin-left: 0
   margin-right: 0
+  font-family: 'Encode Sans Semi Expanded', sans-serif
   font-size: 2.5em
   font-weight: bold
   text-align: center
