Optimal Bizの課題を修正

--- a/pug/optimalbiz.pug
+++ b/pug/optimalbiz.pug
@@ -20,23 +20,27 @@ block content
           dd エンジニア3名 (交代制)
           dd.me デザイナ兼エンジニア (私)
   .container
+    h2 Optimal Bizとは?
+    p 業務で使用しているPCやスマートフォンなどの社内端末を、管理・遠隔操作するためのサービスです。Webアプリケーションから社内端末を一覧したり、端末のロック、初期化などの行うことができます。
+    .pane-2
+      img.shadow(src='image/optimalbiz-old.png')
+      aside 社内端末の一覧画面
+    .pane-2
+      img.shadow(src='image/optimalbiz-old2.png')
+      aside メニュー画面
+  .container
     h2 課題
     .pane-2
-      h3 UIの課題
-      p このWebアプリケーションは、画面によって操作方法やレイアウトが異なっており、ユーザは複数の使い方を学ばなければいけませんでした。
-      p 実装の問題としては、共通のスタイルシートが用意されておらず、個別の画面ごとにスタイルシートを作成されていました。
+      h3 目的の画面にたどり着けない
+      p ほとんどの機能が「メニュー画面」に集約されており、ユーザーが目的の機能を見つけるまでに時間がかかりました。
     .pane-2
-      h3 プロジェクトの課題
-      p このWebアプリケーションは多くのお客様からユーザビリティ改善のご要望を受けていました。しかし、エンジニアはUI案から具体的な仕様に落とし込むことができず、プロジェクトの進捗は滞っていました。
-
+      h3 プロジェクトが進まない
+      p 多くのお客様からユーザビリティ改善のご要望を受けていましたが、具体的な仕様に落とし込むことができず、プロジェクトの進捗は滞っていました。
   .container
     h2 提案
     p ユーザーが迷わないUIを検討し、ユーザーテストで効果を検証した上でリニュアルを進めました。
-    h3 リニュアル前
-    img.shadow(src='image/optimalbiz-old.png')
-    img(src='image/optimalbiz-arrow.png')
-    h3 リニュアル後
-    img.shadow(src='image/optimalbiz-new.png')
+    .pane-2
+      img.shadow(src='image/optimalbiz-new.png')
   .container
     h2 プロセス
     .pane-4
