--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -119,6 +119,16 @@ img {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
     margin-bottom: 16px; }
 
+aside {
+  display: block;
+  margin-top: .25em;
+  margin-bottom: .25em;
+  margin-left: 0;
+  margin-right: 0;
+  line-height: 1;
+  font-size: .82em;
+  text-align: center; }
+
 header nav:after,
 header .inner:after, .container:after {
   content: "";
