Bizのプロセスを箇条書きに変更

--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -118,6 +118,9 @@ img {
   img.shadow {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
     margin-bottom: 16px; }
+  img.flow {
+    width: 80%;
+    margin: 0 10%; }
 
 aside {
   display: block;
@@ -130,7 +133,7 @@ aside {
   text-align: center; }
 
 header nav:after,
-header .inner:after, .container:after {
+header .inner:after, .container:after, .pane-wrap:after {
   content: "";
   clear: both;
   display: block; }
@@ -334,6 +337,11 @@ header.scrolled {
   .container > * {
     margin-left: 16px;
     margin-right: 16px; }
+  .container li {
+    display: list-item;
+    margin: 8px 0;
+    margin-left: 16px;
+    list-style-type: disc; }
 
 .card {
   float: left;
@@ -376,6 +384,9 @@ header.scrolled {
     .card__inner td:last-of-type {
       text-align: right;
       letter-spacing: .5em; }
+
+.pane-wrap {
+  margin: 16px auto; }
 
 .pane-2 {
   width: calc(50% - 34px);
