--- a/pug/optimalbiz.pug
+++ b/pug/optimalbiz.pug
@@ -30,32 +30,47 @@ block content
       aside メニュー画面
   .container
     h2 課題
-    .pane-2
-      h3 目的の画面にたどり着けない
-      p ほとんどの機能が「メニュー画面」に集約されており、ユーザーが目的の機能を見つけるまでに時間がかかりました。
-    .pane-2
-      h3 プロジェクトが進まない
-      p 多くのお客様からユーザビリティ改善のご要望を受けていましたが、具体的な仕様に落とし込むことができず、プロジェクトの進捗は滞っていました。
+    .pane-wrap
+      .pane-2
+        h3 目的の画面にたどり着けない
+        p 100種類もの機能が「メニュー画面」に集約されており、ユーザーが目的の機能を見つけるまでに多くの時間がかかりました。
+      .pane-2
+        h3 プロジェクトが進まない
+        p 多くのお客様からユーザビリティ改善のご要望を受けていましたが、具体的な仕様に落とし込むことができず、プロジェクトの進捗は滞っていました。
   .container
     h2 提案
     p ユーザーが迷わないUIを検討し、ユーザーテストで効果を検証した上でリニュアルを進めました。
-    .pane-2
-      img.shadow(src='image/optimalbiz-new.png')
+    .pane-wrap
+      .pane-2
+        img.shadow(src='image/optimalbiz-new1.png')
+      .pane-2
+        img.shadow(src='image/optimalbiz-new.png')
   .container
     h2 プロセス
     .pane-4
+      img.flow(src='image/optimalbiz-f1.svg')
       h3 情報構造の整理
-      p 機能のグループ分けを行い、いくつかの画面に分割しました。ユーザーの使用している言葉やイメージを反映するために、企画や営業担当のスタッフと共に進めました。
+      ul
+        li 機能をいくつかの画面に分割
     .pane-4
+      img.flow(src='image/optimalbiz-f2.svg')
       h3 UIデザイン
-      p 画面図を作成し、プロトタイプを実装しました。画面図はAdobe Illustratorを使用し、プロトタイプはProttなどのプロトタイプツールを用いるか、HTML・CSSで実装しました。
+      ul
+        li 画面図作成
+        li プロトタイプ作成
     .pane-4
+      img.flow(src='image/optimalbiz-f3.svg')
       h3 ユーザテスト
-      p 作成したプロトタイプに対してユーザテストを行い、フィードバックを元に改善を進めました。テスト設計から実施、データの分析までを一貫して担当しました。
+      ul
+        li ユーザーテスト設計、実施、分析
+        li フィードバックを元に改善提案
     .pane-4
+      img.flow(src='image/optimalbiz-f4.svg')
       h3 エンジニアリング
-      p UIコンポーネントに合わせてスタイルシートを作成し、Webアプリケーション内で共通化しました。またUIガイドラインを作成し、他のエンジニアがすぐに適用できるようにしました。
-      p 要件定義と基本設計の作成を担当しました。
+      ul
+        li システム設計 (要件定義、基本設計)
+        li Webアプリケーション開発
+        li UIガイドライン作成
   .container
     h2 工夫と成果
     p 私はデザイナとエンジニアのタスク状況に合わせて進め方を提案し、両者の橋渡しをしました。例えば、デザイナが忙しいときは、私がUIデザインを作成し、エンジニアに実装を依頼しました。また、エンジニアが忙しいときは、私がアプリケーションを実装しました。
