--- a/sass/common.sass
+++ b/sass/common.sass
@@ -1,11 +1,13 @@
 @import 'reset'
 @import url('https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded')
+@import url('http://fonts.googleapis.com/earlyaccess/notosansjp.css')
 
 body
   width: 100%
   line-height: 1.5
   font-size: 16px
-  font-family: Helvetica, '游ゴシック', 'Yu Gothic', YuGothic, HiraKakuProN-W3, 'メイリオ', Meiryo, sans-serif
+  font-family: "Noto Sans", "Noto Sans JP", sans-serif
+  font-weight: 400
   color: rgb(15,15,15)
 
 h1
@@ -15,7 +17,7 @@ h1
   margin-left: 0
   margin-right: 0
   font-size: 3.5em
-  font-weight: bold
+  font-weight: 500
 
 h2
   display: block
@@ -23,9 +25,8 @@ h2
   margin-bottom: 0.83em
   margin-left: 0
   margin-right: 0
-  font-family: 'Encode Sans Semi Expanded', sans-serif
   font-size: 2.5em
-  font-weight: bold
+  font-weight: 500
   text-align: center
 
 h3
@@ -35,7 +36,7 @@ h3
   margin-left: 0
   margin-right: 0
   font-size: 1.17em
-  font-weight: bold
+  font-weight: 500
   text-align: center
 
 h4
@@ -45,7 +46,7 @@ h4
   margin-left: 0
   margin-right: 0
   font-size: 1em
-  font-weight: bold
+  font-weight: 500
   color: rgb(168,168,168)
 
 h5
@@ -55,7 +56,7 @@ h5
   margin-left: 0
   margin-right: 0
   font-size: .83em
-  font-weight: bold
+  font-weight: 500
   color: rgb(168,168,168)
 
 p
@@ -227,7 +228,7 @@ header .inner
   img
     margin: 32px 0
   dt
-    font-weight: bold
+    font-weight: 500
   dd
     display: list-item
     margin-left: 2em
