フォントの太さを調整

--- a/sass/common.sass
+++ b/sass/common.sass
@@ -7,7 +7,7 @@ body
   line-height: 1.5
   font-size: 16px
   font-family: "Noto Sans", "Noto Sans JP", sans-serif
-  font-weight: 400
+  font-weight: normal
   color: rgb(15,15,15)
 
 h1
@@ -17,7 +17,7 @@ h1
   margin-left: 0
   margin-right: 0
   font-size: 3.5em
-  font-weight: 500
+  font-weight: bold
 
 h2
   display: block
@@ -26,7 +26,7 @@ h2
   margin-left: 0
   margin-right: 0
   font-size: 2.5em
-  font-weight: 500
+  font-weight: bold
   text-align: center
 
 h3
@@ -36,7 +36,7 @@ h3
   margin-left: 0
   margin-right: 0
   font-size: 1.17em
-  font-weight: 500
+  font-weight: bold
   text-align: center
 
 h4
@@ -46,7 +46,7 @@ h4
   margin-left: 0
   margin-right: 0
   font-size: 1em
-  font-weight: 500
+  font-weight: bold
   color: rgb(168,168,168)
 
 h5
@@ -56,7 +56,7 @@ h5
   margin-left: 0
   margin-right: 0
   font-size: .83em
-  font-weight: 500
+  font-weight: bold
   color: rgb(168,168,168)
 
 p
@@ -228,7 +228,7 @@ header .inner
   img
     margin: 32px 0
   dt
-    font-weight: 500
+    font-weight: bold
   dd
     display: list-item
     margin-left: 2em
