--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -41,7 +41,7 @@ body {
   line-height: 1.5;
   font-size: 16px;
   font-family: "Noto Sans", "Noto Sans JP", sans-serif;
-  font-weight: 400;
+  font-weight: normal;
   color: #0f0f0f; }
 
 h1 {
@@ -51,7 +51,7 @@ h1 {
   margin-left: 0;
   margin-right: 0;
   font-size: 3.5em;
-  font-weight: 500; }
+  font-weight: bold; }
 
 h2 {
   display: block;
@@ -60,7 +60,7 @@ h2 {
   margin-left: 0;
   margin-right: 0;
   font-size: 2.5em;
-  font-weight: 500;
+  font-weight: bold;
   text-align: center; }
 
 h3 {
@@ -70,7 +70,7 @@ h3 {
   margin-left: 0;
   margin-right: 0;
   font-size: 1.17em;
-  font-weight: 500;
+  font-weight: bold;
   text-align: center; }
 
 h4 {
@@ -80,7 +80,7 @@ h4 {
   margin-left: 0;
   margin-right: 0;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: bold;
   color: #a8a8a8; }
 
 h5 {
@@ -90,7 +90,7 @@ h5 {
   margin-left: 0;
   margin-right: 0;
   font-size: .83em;
-  font-weight: 500;
+  font-weight: bold;
   color: #a8a8a8; }
 
 p {
@@ -429,7 +429,7 @@ header.scrolled {
   .hero img {
     margin: 32px 0; }
   .hero dt {
-    font-weight: 500; }
+    font-weight: bold; }
   .hero dd {
     display: list-item;
     margin-left: 2em;
