フォントのURLを間違えていたため、修正

--- a/sass/common.sass
+++ b/sass/common.sass
@@ -1,6 +1,6 @@
 @import 'reset'
 @import url('https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded')
-@import url('http://fonts.googleapis.com/earlyaccess/notosansjp.css')
+@import url('https://fonts.googleapis.com/earlyaccess/notosansjp.css')
 
 body
   width: 100%
