--- a/pug/index.pug
+++ b/pug/index.pug
@@ -16,3 +16,7 @@ block content
         .card__icon.switch
           img(src='image/switch-icon.png')
         h3 起業シミュレーション Switch
+block footer
+  footer
+    nav
+      #scroll-top.button: i.fas.fa-arrow-up
