--- a/pug/_template.pug
+++ b/pug/_template.pug
@@ -5,10 +5,12 @@ html
     meta(name='viewport', content='width=device-width,initial-scale=1')
     block title
     link(rel="stylesheet" type="text/css" href="css/common.css")
+    link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.0.13/css/all.css', integrity='sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp', crossorigin='anonymous')
     script(type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
-    script(type='text/javascript' src='javascript/common.js')
+    script(type='text/javascript' src='js/common.js')
     block link
   body
     include _header.pug
     .main
       block content
+      block footer
